--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ Type "help", "copyright", "credits" or "license()" for more information.
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>Web Developer | Designer | Programmer</p>
+        <h1>Divyansh Wadhwa</h1>
+        <p>Undergraduate Researcher | Nanotechnology </p>
     </header>
 
     <section id="about">
