--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Type "help", "copyright", "credits" or "license()" for more information.
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Divyansh Wadhwa - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
