--- a/index.html
+++ b/index.html
@@ -5,37 +5,42 @@ Type "help", "copyright", "credits" or "license()" for more information.
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Divyansh Wadhwa - Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>My GitHub Pages Site</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Divyansh Wadhwa</h1>
-        <p>Undergraduate Researcher | Nanotechnology </p>
+        <h1>Welcome to My Website</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Brief introduction about yourself, your skills, and what you do.</p>
-    </section>
-
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="#">Project 1</a> - Brief description of project 1.</li>
-            <li><a href="#">Project 2</a> - Brief description of project 2.</li>
-            <li><a href="#">Project 3</a> - Brief description of project 3.</li>
-        </ul>
-    </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
-        <p>LinkedIn: <a href="#">LinkedIn Profile</a></p>
-    </section>
-
+    <main>
+        <section id="home">
+            <h2>Home</h2>
+            <p>This is the homepage of my website. You can customize this content as needed.</p>
+        </section>
+        <section id="about">
+            <h2>About</h2>
+            <p>This section can contain information about you or your website.</p>
+        </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <p>Showcase your projects here. Add details, images, or links.</p>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Provide contact information or a form for visitors to reach you.</p>
+        </section>
+    </main>
     <footer>
-        <p>© 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 My GitHub Pages Site</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
