--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <!-- Navigation Bar -->
-    <nav class="navbar">
+    <nav class="navbar" style="display: none;">
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
