--- a/index.html
+++ b/index.html
@@ -3,71 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Website</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Landing Screen with Typing Effect -->
-    <div class="typing-screen" id="typing-screen">
-        <h1 id="typing-text">Welcome to My Portfolio</h1>
-    </div>
-
     <!-- Navigation Bar -->
-    <nav class="navbar" style="display: none;">
+    <nav class="navbar">
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#coursework-skills">Coursework & Skills</a></li>
+            <li><a href="#research-projects">Research Projects</a></li>
+            <li><a href="#work-experience">Work Experience</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
     <!-- Home Section -->
     <section id="home" class="section">
-        <h2>Welcome to My Website</h2>
-        <p>This is an example of a personal portfolio.</p>
-        <div class="scroll-indicator">↓ Scroll Down</div>
+        <div class="intro">
+            <h1>Welcome to My Portfolio</h1>
+            <p>Crafting elegant solutions with code.</p>
+        </div>
     </section>
 
     <!-- About Section -->
     <section id="about" class="section">
-        <div class="about-content">
-            <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
-            <div>
-                <h2>About Me</h2>
-                <p>A brief bio or background information goes here.</p>
-            </div>
-        </div>
+        <h2>About Me</h2>
+        <p>I am a developer with a passion for creating stunning websites and applications.</p>
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="section">
-        <h2>Projects</h2>
-        <div class="project-gallery">
-            <div class="project-item">Project 1</div>
-            <div class="project-item">Project 2</div>
-            <div class="project-item">Project 3</div>
-            <!-- Add more projects as needed -->
-        </div>
+    <!-- Education Section -->
+    <section id="education" class="section">
+        <h2>Education</h2>
+        <p>Include your educational background here, such as degrees and institutions.</p>
+    </section>
+
+    <!-- Coursework and Skills Section -->
+    <section id="coursework-skills" class="section">
+        <h2>Coursework & Skills</h2>
+        <p>List relevant coursework and skills that showcase your expertise.</p>
+    </section>
+
+    <!-- Research Projects Section -->
+    <section id="research-projects" class="section">
+        <h2>Research Projects</h2>
+        <p>Provide details of any research projects you've worked on, including key achievements.</p>
+    </section>
+
+    <!-- Work Experience Section -->
+    <section id="work-experience" class="section">
+        <h2>Work Experience</h2>
+        <p>Describe your work experience, including roles and responsibilities.</p>
     </section>
 
     <!-- Contact Section -->
     <section id="contact" class="section">
         <h2>Contact Me</h2>
-        <form class="contact-form">
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <textarea placeholder="Your Message" required></textarea>
-            <button type="submit">Send</button>
-        </form>
+        <p>Thanks for swinging by! You can find some ways to reach me here :)</p>
+        <div class="contact-links">
+            <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a> |
+            <a href="mailto:yourname@gmail.com">Gmail</a>
+        </div>
     </section>
 
     <!-- Footer -->
     <footer>
         <p>&copy; 2024 My Portfolio. All Rights Reserved.</p>
-        <button id="back-to-top">↑ Back to Top</button>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
