--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Landing Screen with Typing Effect -->
+    <div class="typing-screen" id="typing-screen">
+        <h1 id="typing-text">Welcome to My Portfolio</h1>
+    </div>
+
     <!-- Navigation Bar -->
-    <nav class="navbar">
+    <nav class="navbar" style="display: none;">
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#coursework-skills">Coursework & Skills</a></li>
             <li><a href="#research-projects">Research Projects</a></li>
@@ -22,6 +28,9 @@
 
     <!-- Home Section -->
     <section id="home" class="section">
+        <h2>Welcome to My Website</h2>
+        <p>This is an example of a personal portfolio.</p>
+        <div class="scroll-indicator">↓ Scroll Down</div>
         <div class="intro">
             <h1>Welcome to My Portfolio</h1>
             <p>Crafting elegant solutions with code.</p>
@@ -30,8 +39,24 @@
 
     <!-- About Section -->
     <section id="about" class="section">
-        <h2>About Me</h2>
-        <p>I am a developer with a passion for creating stunning websites and applications.</p>
+        <div class="about-content">
+            <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+            <div>
+                <h2>About Me</h2>
+                <p>I am a developer with a passion for creating stunning websites and applications.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects" class="section">
+        <h2>Projects</h2>
+        <div class="project-gallery">
+            <div class="project-item">Project 1</div>
+            <div class="project-item">Project 2</div>
+            <div class="project-item">Project 3</div>
+            <!-- Add more projects as needed -->
+        </div>
     </section>
 
     <!-- Education Section -->
@@ -61,6 +86,12 @@
     <!-- Contact Section -->
     <section id="contact" class="section">
         <h2>Contact Me</h2>
+        <form class="contact-form">
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" required></textarea>
+            <button type="submit">Send</button>
+        </form>
         <p>Thanks for swinging by! You can find some ways to reach me here :)</p>
         <div class="contact-links">
             <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a> |
@@ -71,6 +102,9 @@
     <!-- Footer -->
     <footer>
         <p>&copy; 2024 My Portfolio. All Rights Reserved.</p>
+        <button id="back-to-top">↑ Back to Top</button>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
