--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Home Section -->
     <section id="home" class="section">
         <div class="intro">
-            <h1>Welcome to My Portfolio</h1>
+            <h1 id="typing-text"></h1>
             <p>Crafting elegant solutions with code.</p>
         </div>
     </section>
@@ -72,5 +72,7 @@
     <footer>
         <p>&copy; 2024 My Portfolio. All Rights Reserved.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
