--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Full-Screen Typing Effect Section -->
+    <section id="home" class="full-screen">
+        <h1 id="typing-text"></h1>
+    </section>
+
     <!-- Navigation Bar -->
     <nav class="navbar">
         <ul>
@@ -20,54 +25,12 @@
         </ul>
     </nav>
 
-    <!-- Home Section -->
-    <section id="home" class="section">
-        <div class="intro">
-            <h1 id="typing-text"></h1>
-            <p>Crafting elegant solutions with code.</p>
-        </div>
-    </section>
-
-    <!-- About Section -->
+    <!-- Other sections as placeholders -->
     <section id="about" class="section">
         <h2>About Me</h2>
         <p>I am a developer with a passion for creating stunning websites and applications.</p>
     </section>
-
-    <!-- Education Section -->
-    <section id="education" class="section">
-        <h2>Education</h2>
-        <p>Include your educational background here, such as degrees and institutions.</p>
-    </section>
-
-    <!-- Coursework and Skills Section -->
-    <section id="coursework-skills" class="section">
-        <h2>Coursework & Skills</h2>
-        <p>List relevant coursework and skills that showcase your expertise.</p>
-    </section>
-
-    <!-- Research Projects Section -->
-    <section id="research-projects" class="section">
-        <h2>Research Projects</h2>
-        <p>Provide details of any research projects you've worked on, including key achievements.</p>
-    </section>
-
-    <!-- Work Experience Section -->
-    <section id="work-experience" class="section">
-        <h2>Work Experience</h2>
-        <p>Describe your work experience, including roles and responsibilities.</p>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="section">
-        <h2>Contact Me</h2>
-        <p>Thanks for swinging by! You can find some ways to reach me here :)</p>
-        <div class="contact-links">
-            <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a> |
-            <a href="mailto:yourname@gmail.com">Gmail</a>
-        </div>
-    </section>
-
+    
     <!-- Footer -->
     <footer>
         <p>&copy; 2024 My Portfolio. All Rights Reserved.</p>
