--- a/index.html
+++ b/index.html
@@ -3,73 +3,226 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Portfolio - Divyansh Wadhwa</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+        }
+
+        body {
+            background: #000;
+            color: #fff;
+            line-height: 1.6;
+        }
+
+        nav {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            backdrop-filter: blur(10px);
+            z-index: 1000;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        nav ul {
+            display: flex;
+            list-style: none;
+            padding: 1rem;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        nav a {
+            color: #888;
+            text-decoration: none;
+            padding: 0.5rem 1rem;
+            transition: color 0.3s;
+        }
+
+        nav a:hover {
+            color: #fff;
+        }
+
+        section {
+            min-height: 100vh;
+            padding: 80px 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .card {
+            background: linear-gradient(145deg, #111, #000);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+            padding: 2rem;
+            max-width: 1000px;
+            width: 100%;
+            margin: 0 auto;
+        }
+
+        .welcome {
+            font-size: 4rem;
+            font-weight: bold;
+            text-align: center;
+            background: linear-gradient(to right, #888, #fff);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+        }
+
+        .cursor {
+            display: inline-block;
+            width: 3px;
+            height: 1em;
+            background-color: #fff;
+            margin-left: 8px;
+            animation: blink 1s infinite;
+        }
+
+        @keyframes blink {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0; }
+        }
+
+        .section-title {
+            font-size: 2rem;
+            margin-bottom: 1.5rem;
+            background: linear-gradient(to right, #888, #fff);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+        }
+
+        .project {
+            background: rgba(255, 255, 255, 0.05);
+            padding: 1rem;
+            border-radius: 8px;
+            margin-bottom: 1rem;
+        }
+
+        .project h3 {
+            color: #ddd;
+            margin-bottom: 0.5rem;
+        }
+
+        .project p {
+            color: #888;
+        }
+
+        .experience-item {
+            border-left: 4px solid #333;
+            padding: 1rem;
+            margin-bottom: 1rem;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 0 8px 8px 0;
+        }
+
+        #scrollTop {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: #333;
+            color: #fff;
+            border: none;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            cursor: pointer;
+            display: none;
+            transition: background 0.3s;
+        }
+
+        #scrollTop:hover {
+            background: #444;
+        }
+
+        @media (max-width: 768px) {
+            .welcome {
+                font-size: 2.5rem;
+            }
+        }
+    </style>
 </head>
 <body>
-    <!-- Full-Screen Typing Effect Section -->
-    <section id="home" class="full-screen">
-        <h1 id="typing-text"></h1>
-    </section>
-
-    <!-- Navigation Bar -->
-    <nav class="navbar">
+    <nav>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#coursework-skills">Coursework & Skills</a></li>
-            <li><a href="#research-projects">Research Projects</a></li>
-            <li><a href="#work-experience">Work Experience</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#research">Research</a></li>
+            <li><a href="#experience">Experience</a></li>
         </ul>
     </nav>
 
-    <!-- About Section -->
-    <section id="about" class="section">
-        <h2>About Me</h2>
-        <p>I am a developer with a passion for creating stunning websites and applications.</p>
-    </section>
-
-    <!-- Education Section -->
-    <section id="education" class="section">
-        <h2>Education</h2>
-        <p>Include your educational background here, such as degrees and institutions.</p>
-    </section>
-
-    <!-- Coursework and Skills Section -->
-    <section id="coursework-skills" class="section">
-        <h2>Coursework & Skills</h2>
-        <p>List relevant coursework and skills that showcase your expertise.</p>
-    </section>
-
-    <!-- Research Projects Section -->
-    <section id="research-projects" class="section">
-        <h2>Research Projects</h2>
-        <p>Provide details of any research projects you've worked on, including key achievements.</p>
-    </section>
-
-    <!-- Work Experience Section -->
-    <section id="work-experience" class="section">
-        <h2>Work Experience</h2>
-        <p>Describe your work experience, including roles and responsibilities.</p>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="section">
-        <h2>Contact Me</h2>
-        <p>Thanks for swinging by! You can find some ways to reach me here :)</p>
-        <div class="contact-links">
-            <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a> |
-            <a href="mailto:yourname@gmail.com">Gmail</a>
+    <section id="home">
+        <div class="card">
+            <h1 class="welcome">
+                <span id="typed-text"></span><span class="cursor">|</span>
+            </h1>
+            <div style="text-align: center; margin-top: 2rem;">
+                <h2 style="font-size: 2.5rem; color: #ddd;">Divyansh Wadhwa</h2>
+                <p style="color: #888; margin-top: 1rem;">Undergraduate Researcher at IIT Delhi</p>
+                <p style="color: #666;">Visiting Researcher at NUS | Material Science Enthusiast</p>
+            </div>
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2024 My Portfolio. All Rights Reserved.</p>
-    </footer>
+    <section id="about">
+        <div class="card">
+            <h2 class="section-title">About Me</h2>
+            <p style="color: #888;">
+                I'm a final-year undergraduate student at IIT Delhi, specializing in Material Science. 
+                My academic journey has led me to a keen interest in metamaterials and the development 
+                of novel materials for cutting-edge applications in defense and industrial technologies.
+            </p>
+            <p style="color: #888; margin-top: 1rem;">
+                Outside of academics, I'm drawn to adventure sports that challenge me and push my limits. 
+                My personal favorites are skydiving and rock climbing, which offer the thrill and 
+                exhilaration I seek during my free time.
+            </p>
+        </div>
+    </section>
 
+    <section id="research">
+        <div class="card">
+            <h2 class="section-title">Research</h2>
+            <div class="project">
+                <h3>Encryption based on physically unclonable function generators</h3>
+                <p>Developed a PUF-based encryption system using quantum dots for enhanced security in authentication systems.</p>
+            </div>
+            <div class="project">
+                <h3>Tunable Plasmonic Lenses for sub-wavelength Optical Microscopy</h3>
+                <p>Investigation of novel optical systems for enhanced microscopy applications.</p>
+            </div>
+            <div class="project">
+                <h3>Investigation of magnetostriction in heusler alloys</h3>
+            </div>
+        </div>
+    </section>
+
+    <section id="experience">
+        <div class="card">
+            <h2 class="section-title">Experience</h2>
+            <div class="experience-item">
+                <h3>Research Intern</h3>
+                <p>National University of Singapore • Summer 2024</p>
+            </div>
+            <div class="experience-item">
+                <h3>IRD Fellow</h3>
+                <p>IIT Delhi • Dec 2023 - Present</p>
+            </div>
+            <div class="experience-item">
+                <h3>Undergraduate Researcher</h3>
+                <p>IIT Delhi • Summer 2023 - Present</p>
+            </div>
+        </div>
+    </section>
+
+    <button id="scrollTop" title="Go to top">↑</button>
     <script src="script.js"></script>
 </body>
 </html>
