--- a/index.html
+++ b/index.html
@@ -159,17 +159,18 @@
     </nav>
 
     <section id="home">
-        <div class="card">
-            <h1 class="welcome">
-                <span id="typed-text"></span><span class="cursor">|</span>
-            </h1>
-            <div style="text-align: center; margin-top: 2rem;">
-                <h2 style="font-size: 2.5rem; color: #ddd;">Divyansh Wadhwa</h2>
-                <p style="color: #888; margin-top: 1rem;">Undergraduate Researcher at IIT Delhi</p>
-                <p style="color: #666;">Visiting Researcher at NUS | Material Science Enthusiast</p>
-            </div>
+    <div class="card">
+        <h1 class="welcome">
+            <span id="typed-text"></span><span class="cursor">|</span>
+        </h1>
+        <div style="text-align: center; margin-top: 2rem;">
+            <img src="Desktop/profilepic" alt="Profile Picture of Divyansh Wadhwa" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem;">
+            <h2 style="font-size: 2.5rem; color: #ddd;">Divyansh Wadhwa</h2>
+            <p style="color: #888; margin-top: 1rem;">Undergraduate Researcher at IIT Delhi</p>
+            <p style="color: #666;">Visiting Researcher at NUS | Material Science Enthusiast</p>
         </div>
-    </section>
+    </div>
+</section>
 
     <section id="about">
         <div class="card">
