--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <span id="typed-text"></span><span class="cursor">|</span>
         </h1>
         <div style="text-align: center; margin-top: 2rem;">
-            <img src="Desktop/profilepic" alt="Profile Picture of Divyansh Wadhwa" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem;">
+            <img src="Profilepic.png" alt="Profile Picture of Divyansh Wadhwa" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem;">
             <h2 style="font-size: 2.5rem; color: #ddd;">Divyansh Wadhwa</h2>
             <p style="color: #888; margin-top: 1rem;">Undergraduate Researcher at IIT Delhi</p>
             <p style="color: #666;">Visiting Researcher at NUS | Material Science Enthusiast</p>
