--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#research">Research</a></li>
-            <li><a href="#experience">Experience</a></li>
+            <li><a href="./index.html#home2">Home</a></li>
+            <li><a href="./index.html#about">About</a></li>
+            <li><a href="./index.html#research">Research</a></li>
+            <li><a href="./index.html#experience">Experience</a></li>
         </ul>
     </nav>
 
@@ -205,6 +205,7 @@
             <div class="project">
                 <h3>Encryption based on physically unclonable function generators</h3>
                 <p>Developed a PUF-based encryption system using quantum dots for enhanced security in authentication systems.</p>
+                <a style="color: #1690df" href="https://codeberg.org/gurharindersingh/pages/raw/branch/main/dl1234-final-poster.pdf">Read Preprint</a>
             </div>
             <div class="project">
                 <h3>Tunable Plasmonic Lenses for sub-wavelength Optical Microscopy</h3>
@@ -213,6 +214,7 @@
             </div>
             <div class="project">
                 <h3>Investigation of magnetostriction in heusler alloys</h3>
+                <a style="color: #1690df" href="https://codeberg.org/gurharindersingh/pages/raw/branch/main/endterm-report.pdf">Read Preprint</a>
             </div>
         </div>
     </section>
