--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
 
             <img src="Profilepic.png" alt="Profile Picture of Divyansh Wadhwa" style="float: left; 
   margin: 5px; width: 250px; height: 300px; border-radius: 50%; margin-bottom: 1rem;">
-            <h2 style="margin-top: 5rem;font-size: 2.5rem; color: #ddd;">Divyansh Wadhwa</h2>
-            <p style="font-size: 1.5rem;color: #bbb; margin-top: 5rem;">Undergrad at Indian Institute of Technology, Delhi</p>
+            <h2 style="margin-top: 6rem;font-size: 2.5rem; color: #ddd;">Divyansh Wadhwa</h2>
+            <p style="font-size: 1.5rem;color: #bbb; margin-top: 4rem;">Undergrad at Indian Institute of Technology, Delhi</p>
             <p style="font-size: 1.5rem;color: #bbb;">Visiting Researcher at NUS | Material Science Enthusiast</p>
         </div>
     </div>
@@ -185,13 +185,13 @@
 
     <section id="about">
         <div class="card">
-            <h2 class="section-title" style="font-size:3vw">About Me</h2>
-            <p style="font-size: 1.5rem;color: #bbb;">
+            <h2 class="section-title" style="font-size:2.5vw">About Me</h2>
+            <p style="font-size: 1.2rem;color: #bbb;">
                 I'm a final-year undergraduate student at IIT Delhi, specializing in Material Science. 
                 My academic journey has led me to a keen interest in metamaterials and the development 
                 of novel materials for cutting-edge applications in defense and industrial technologies.
             </p>
-            <p style="font-size: 1.5rem;color: #bbb; margin-top: 1rem;">
+            <p style="font-size: 1.2rem;color: #bbb; margin-top: 1rem;">
                 Outside of academics, I'm drawn to adventure sports that challenge me and push my limits. 
                 My personal favorites are skydiving and rock climbing, which offer the thrill and 
                 exhilaration I seek during my free time.
@@ -201,20 +201,38 @@
 
     <section id="research">
         <div class="card">
-            <h2 class="section-title">Research Projects</h2>
+            <h2 class="section-title" style="font-size:2.5vw">Research Projects</h2>
             <div class="project">
                 <h3>Encryption based on physically unclonable function generators</h3>
-                <p>Developed a PUF-based encryption system using quantum dots for enhanced security in authentication systems.</p>
-                <a style="color: #1690df" href="https://codeberg.org/gurharindersingh/pages/raw/branch/main/dl1234-final-poster.pdf">Read Preprint</a>
+                <p>Prof Nirat Ray, IIT Delhi | (Jan,2024-Present)</p>
+                <br>
+                <p>Working on the fabrication of Physically Unclonable Functions for secured communications immune to ML modelling attacks.
+I am working on chip design to exploit conductivity and memristor effects of gold quantum dots to achieve high encoding capacity.</p>
+                <a style="color: #1690df" href="https://codeberg.org/gurharindersingh/pages/raw/branch/main/dl1234-final-poster.pdf">Link for conference poster</a>
             </div>
             <div class="project">
                 <h3>Tunable Plasmonic Lenses for sub-wavelength Optical Microscopy</h3>
-                <p>Investigation of novel optical systems for enhanced microscopy applications.</p>
+                <p>Prof B. Krishna, IIT Delhi | (May,2023-Oct,2023)</p>
+                <br>
+                <p>Worked on the simulation of Tunable Plasmonic Lenses for sub-Wavelength Optical Microscopy.
+As a part of this project I simulated Light-Matter interaction for various sub-wavelength apertures to achieve the desired electric field confinement and enhancement effects.
+Worked on tunability of lens for THz frequency range using temperature and external voltage variation.
+Was awarded Undergraduate Research Award for successful completion of project.</p>
                 <a style="color: #1690df" href="https://arxiv.org/abs/2411.19150">Read Preprint</a>
             </div>
             <div class="project">
                 <h3>Investigation of magnetostriction in heusler alloys</h3>
-                <a style="color: #1690df" href="https://codeberg.org/gurharindersingh/pages/raw/branch/main/endterm-report.pdf">Read Preprint</a>
+                <p>Prof Lakshmi Narayan, IIT Delhi | (August,2024-Present)</p>
+                <br>
+                <p>Working on preparation of Co2CrAl Heusler alloy and determining magnetostriction constants through nano-indentation tests in presence of varying magnetic field.</p>
+                <a style="color: #1690df" href="https://codeberg.org/gurharindersingh/pages/raw/branch/main/endterm-report.pdf">Read Thesis</a>
+            </div>
+            <div class="project">
+                <h3>Improving conductivity and mechanical stability of Lithium batteries using LLCZN nanoscale additives</h3>
+                <p>Prof Seeram Ramakrishna, NUS | (May,2024-August,2024)<p>
+                <br>
+
+                <p>Working on LLCZN Compounds as nanoscale additives in Polymer based solid electrolytes for Lithium batteries.My focus is to decrease size of additives following a top-down synthesis approach and increasing ionic conductivity of electrolytes without compromising flexibility and mechanical strength.</p>
             </div>
         </div>
     </section>
@@ -227,7 +245,7 @@
                 <p>National University of Singapore • Summer 2024</p>
             </div>
             <div class="experience-item">
-                <h3>IRD Fellow</h3>
+                <h3>Innovation and Research Development Fellow</h3>
                 <p>IIT Delhi • Dec 2023 - Present</p>
             </div>
             <div class="experience-item">
